--- a/INSTALL
+++ b/INSTALL
@@ -6,7 +6,7 @@ You need a Linux system with a C-compiler and header files for libasound.
      sudo apt-get install gcc libasound2-dev
 )
 
-To compile the programs 'netplay', 'bufnet', 'volrace', 'writeloop'
+To compile the programs 'netplay', 'bufhrt', 'volrace', 'writeloop'
 and 'catloop' say:
 
   make
@@ -25,7 +25,7 @@ or for a statically linked version:
 
 Then use one of these instead of bin/netplay.
 
-For a good performance of 'netplay' and 'bufnet' you should use a Linux
+For a good performance of 'netplay' and 'bufhrt' you should use a Linux
 kernel with highres timers enabled. This is the case for most Linux
 distributions, you can check it by running the utility 'bin/highrestest'.
 
