Options --no-buf-stats and --no-delay-stats
New options for playhrt and explanation of "delayed loops" in help text.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
         Changes between published versions
 
-0.7 to 0.7.1
+0.7 to 0.8
+
+- various improvements in wording of help texts and verbose messages.
+
+- new options --no-buf-stats and --no-delay-stats and explanation of
+  "delayed loops" in 'playhrt'.
 
 - added --verbose option to 'shmcat', 'catloop', 'writeloop'
   and 'volrace'.
