--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 0.7 to 0.8
 
+- using additional register/variable for refreshing of memory. Causes
+  again a surprising improvement of sound in my system.
+
 - various improvements in wording of help texts and verbose messages.
 
 - new options --no-buf-stats and --no-delay-stats and explanation of
