New option --force-shm for writeloop.
Useful if a previous run of writeloop/catloop was killed and the
semaphores were not closed and removed.

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 0.7 to 0.8
 
+- added option --force-shm to 'writeloop' (overwrites semaphores left
+  over from other calls).
+
 - now using 'memclean' in 'writeloop'.
 
 - using additional register/variable for refreshing of memory. Causes
