New option --max-bad-reads for 'playhrt'.
This is the maximal accepted number of input blocks which are shorter than
expected before playhrt stops.

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
 
 0.7 to 0.8
 
+- added option --max-bad-reads to 'playhrt' (program stops when given 
+  number of input blocks was too small, the value 4 was hardcoded before)
+
 - added option --force-shm to 'writeloop' (overwrites semaphores left
   over from other calls).
 
